--- a/card-standart.html
+++ b/card-standart.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Двери стандарт</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -281,34 +282,34 @@
             <td>Тип дверных петель<span>-</span></td>
           </tr>
           <tr>
-            <td>Количество дверных петель	<span>-</span></td>
+            <td>Количество дверных петель <span>-</span></td>
           </tr>
           <tr>
-            <td>Угол открывания	<span>-</span></td>
+            <td>Угол открывания <span>-</span></td>
           </tr>
           <tr>
-            <td>Съемные уголки для замены внутренней панели	<span>-</span></td>
+            <td>Съемные уголки для замены внутренней панели <span>-</span></td>
           </tr>
           <tr>
-            <td>Функциональная задвижка	<span>-</span></td>
+            <td>Функциональная задвижка <span>-</span></td>
           </tr>
           <tr>
-            <td>Замок-невидимка	<span>-</span></td>
+            <td>Замок-невидимка <span>-</span></td>
           </tr>
           <tr>
-            <td>Электронный замок со сканером отпечатка пальцев	<span>-</span></td>
+            <td>Электронный замок со сканером отпечатка пальцев <span>-</span></td>
           </tr>
           <tr>
-            <td>Регулятор защелки	<span>-</span></td>
+            <td>Регулятор защелки <span>-</span></td>
           </tr>
           <tr>
-            <td>Доводчик	<span>-</span></td>
+            <td>Доводчик <span>-</span></td>
           </tr>
           <tr>
-            <td>Высота глазка	<span>-</span></td>
+            <td>Высота глазка <span>-</span></td>
           </tr>
           <tr>
-            <td>Угол обзора дверного глазка	<span>-</span></td>
+            <td>Угол обзора дверного глазка <span>-</span></td>
           </tr>
         </table>
       </div>
@@ -322,13 +323,258 @@
   <section class="add-options__section">
     <div class="container">
       <h4 class="card-service__row-title">Дополнительные опции</h4>
+      <div class="block__row">
+        <div class="add-options__card">
+          <p class="add-options__card-title">Каталог замков</p>
+          <div class="add-options__card-img add-options__card-img-1">
+            <span class="add-options__card-label"></span>
+          </div>
+        </div>
+        <div class="add-options__card">
+          <p class="add-options__card-title">Броненакладки</p>
+          <div class="add-options__card-img add-options__card-img-2">
+            <span class="add-options__card-label"></span>
+          </div>
+        </div>
+        <div class="add-options__card">
+          <p class="add-options__card-title">Каталог ручек</p>
+          <div class="add-options__card-img add-options__card-img-3">
+            <span class="add-options__card-label"></span>
+          </div>
+        </div>
+        <div class="add-options__card">
+          <p class="add-options__card-title">Система видеонаблюдения</p>
+          <div class="add-options__card-img add-options__card-img-4">
+            <span class="add-options__card-label"></span>
+          </div>
+        </div>
+        <div class="add-options__card">
+          <p class="add-options__card-title">Каталог глазков</p>
+          <div class="add-options__card-img add-options__card-img-5">
+            <span class="add-options__card-label"></span>
+          </div>
+        </div>
+      </div>
+      <h3 class="benefits__title add-options__title">Вам так же доступны:</h3>
+      <div class="block__row">
+        <ul class="add-options__col">
+            <li class="add-options__link">Дополнительное утепление
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Дополнительные петли
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Повышенная толщина металла
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Скрытые петли
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Петли «Барк»
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Видезвонок
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Биометрический замок
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Отбойник из нержавеющей стали
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Антикоррозийная обработка
+              <span>1000 &#8381;</span>
+            </li>
+            <li class="add-options__link">Водоотталкивающая пропитка
+              <span>1000 &#8381;</span>
+            </li>
+        </ul>
+        <ul class="add-options__col">
+          <li class="add-options__link">Вызывная панель
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Ночная задвижка
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Доводчик
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Водоотводчик
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Порог
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Порог с подсветкой
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Регулятор защелки
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Фрамуга
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Кнокер (кольцо-колотушка)
+            <span>1000 &#8381;</span>
+          </li>
+          <li class="add-options__link">Установка фурнитуры клиента
+            <span>1000 &#8381;</span>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
   <section class="work__section">
     <div class="container">
       <h4 class="card-service__row-title">Как мы работаем</h4>
+      <div class="card__row">
+        <div class="card__plus card__work">
+          <div class="card__plus-numb">01</div>
+          <div class="card__plus-tatle">Вы оставляете заявку на сайте или по телефону</div>
+          <div class="card__work-text">Выберайте модели в каталоге или проконсультируйтесь с оператором</div>
+        </div>
+        <div class="card__plus card__work">
+          <div class="card__plus-numb">02</div>
+          <div class="card__plus-tatle">Замер и заключения договора</div>
+          <div class="card__work-text">Снятие замеров, ознакомление с печатными каталогами, выбор отделки. Заключени договра с техническим специалистом и внесение предоплаты.</div>
+        </div>
+        <div class="card__plus card__work">
+          <div class="card__plus-numb">03</div>
+          <div class="card__plus-tatle">Изготовление входной двери</div>
+          <div class="card__work-text">Срок изготовления зависит от сложности выполняемой работы. В среднем это до 5 дней. Наши специалисты оповестят вас о готовности.</div>
+        </div>
+        <div class="card__plus card__work">
+          <div class="card__plus-numb">04</div>
+          <div class="card__plus-tatle">Доставка и установка </div>
+          <div class="card__work-text">Доставка, демонтаж старой двери и установка новой — бесплатно</div>
+        </div>
+      </div>
     </div>
   </section>
+  <section class="visualization__section">
+    <div class="container">
+      <div class="block__row">
+        <div class="visualization__content">
+          <h6 class="newcomer__title visualization__title">Бесплатная визуализация двери в вашем интерьере</h6>
+          <p class="visualization__text">Выбрать теперь проще! Наши дизайнеры бесплатно сделают визуализацию двери, которая вам понравилась, в вашем интерьере.</p>
+            <div class="newcomer-btn">
+              <a href="#" class="main-btn__link newcomer-btn__link">Получить скидку</a>
+              <div class="main-btn__arrow newcomer-btn__arrow visualizationr-btn__arrow"><span
+                  class="main-btn__circle newcomer-btn__circle"></span></div>
+            </div>
+        </div>
+        <img src="img/visualization.png" alt="Наша дверь в вашем интерьере" class="visualization-img">
+      </div>
+    </div>
+  </section>
+  <section class="payment__section">
+    <div class="container">
+      <h4 class="card-service__row-title">Как оплатить двери Expert?</h4>
+      <div class="card__row">
+        <div class="card__plus card__payment card__work">
+          <div class="card__plus-numb">01</div>
+          <div class="card__payment-text">Доставка и установка осуществляется после частичной предоплаты (10-30% в зависимости от категории и стоимости изделия, подробную информацию можно уточнить у менеджера)</div>
+        </div>
+        <div class="card__plus card__payment card__work">
+          <div class="card__plus-numb">02</div>
+          <div class="card__payment-text">После доставки погашается остальная часть стоимости дверных комплектов, фурнитуры и других материалов</div>
+        </div>
+        <div class="card__plus card__payment card__work">
+          <div class="card__plus-numb">03</div>
+          <div class="card__payment-text">Установка дверей оплачивается по факту после приема работы</div>
+        </div>
+      </div>
+      <div class="sentence__conteiner">
+        <h4 class="card-service__row-title">Вам могут понравиться:</h4>
+        <div class="filter__result-row sentens__row">
+          <div class="col-1">
+            <div class="filter__box">
+              <div class="filter-box__content">
+                <p class="filter-box__title">Expert pro</p>
+                <span class="filter-box__info">Скандинавский дуб</span>
+                <div class="box__label">-10%</div>
+                <div class="filter-box__img"></div>
+              </div>
+              <div class="filter__sale sale_right"><span class="old__sale">56 000 &#8381;</span>46 000 &#8381;</div>
+            </div>
+          </div>
+          <div class="col-1">
+            <div class="filter__box">
+              <div class="filter-box__content">
+                <p class="filter-box__title">Expert pro</p>
+                <span class="filter-box__info">Скандинавский дуб</span>
+                <div class="filter-box__img"></div>
+              </div>
+              <div class="filter__sale sale_right">46 000 &#8381;</div>
+            </div>
+          </div>
+          <div class="col-1">
+            <div class="filter__box">
+              <div class="filter-box__content">
+                <p class="filter-box__title">Expert pro</p>
+                <span class="filter-box__info">Скандинавский дуб</span>
+                <div class="filter-box__img"></div>
+              </div>
+              <div class="filter__sale sale_right">46 000 &#8381;</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="sentens__nav">
+        <div class="sentens__nav-item">
+          <div class="sentens__nav_left"></div>
+          <a href="" class="sentens__nav-link"></a>
+          Вернуться в каталог
+        </div>
+        <div class="sentens__nav-item">
+          <a href="" class="sentens__nav-link"></a>
+          Следующая дверь
+          <div class="sentens__nav_right"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__row">
+        <div class="footer__col">
+          <div class="footer__row-top">
+            <a href="index.html" class="footer__logo">Expert</a>
+            <ul class="footer__menu">
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Каталог</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Как выбрать  двери</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Акции</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">О производителе</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Карта сайта</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__row-bottom">
+            <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
+            <a href="" class="footer__bottom-link">Обработка персональных данных</a>
+            <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
+          </div>
+        </div>
+        <div class="footer__col_right">
+          <a href="tel:+7(800)666 66 66" class="bottom__link-tel">8 800 666 66 66</a>
+          <p class="footer__text">Бесплатный звонок</p>
+          <a href="#" class="social__link">Instagtam</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
