--- a/card-standart.html
+++ b/card-standart.html
@@ -71,7 +71,7 @@
             <a href="" class="card__order-link"></a>
           </div>
           <div class="card__consultation">
-            <a href="" class="consultation__link block__text">Получить консультацию</a>
+            <a href="" class="consultation__link_gray block__text">Получить консультацию</a>
           </div>
         </div>
         <div class="block__row">
