--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <a href="index.html" class="footer__logo">Expert</a>
             <ul class="footer__menu">
               <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Каталог</a>
+                <a href="catalog.html" class="footer__menu-link">Каталог</a>
               </li>
               <li class="footer__menu-item">
                 <a href="" class="footer__menu-link">Как выбрать двери</a>
