--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
               <div class="component">
               </div>
               <div class="special-offer__card_small">
-                <div class="special-offer__box_small">
-                  <img src="img/door355.png" alt="дверь на" class="box-small__img">
+                <div class="special-offer__box_small catalog__box-small">
+                  <img src="img/door355.png" alt="дверь на" class="special-offer__box-img">
                 </div>
                 <div class="sale sale_right">35 000 &#8381;</div>
               </div>
             </div>
-            <div class="block__row main-btn__hidden">
+            <div class="block__row card__hidden">
               <div class="special-offer__card">
                 <div class="sale">26 800 &#8381;</div>
                 <div class="special-offer__box">
@@ -130,9 +130,9 @@
               </div>
             </div>
           </div>
-          <div class="section__col special-offer__col">
+          <div class="section__col">
             <div class="special-offer__box_big">
-              <img src="img/door44.png" alt="дверь на" class="box_big-img">
+              <img src="img/door44.png" alt="дверь на" class="box-big__img">
             </div>
             <div class="sale">44 000 &#8381;</div>
           </div>
@@ -140,7 +140,7 @@
         <div class="block__row block__row-pages">
           <div class="main-btn">
             <a href="#" class="main-btn__link">Перейти в каталог</a>
-            <div class="main-btn__arrow main-btn-benefits__arrow">
+            <div class="main-btn__arrow view-btn__arrow">
               <span class="main-btn__circle"></span>
             </div>
           </div>
