--- a/catalog.html
+++ b/catalog.html
@@ -37,6 +37,7 @@
           </ul>
           <div class="help__btn help__btn-light">
             <a href="#" class="help__link help__link_gray">Помочь выбрать</a>
+            <a href="" class="help__menu help__link_gray">Меню</a>
           </div>
         </div>
       </div>
@@ -55,12 +56,13 @@
   </header>
   <main>
     <div class="container">
-      <section class="filter__section">
-        <div class="block__row">
+      <div class="filter__section">
+        <div class="block__row filter__sectio-row">
           <div class="filter__row">
             <button class="filter__btn filter__btn_active">Expert | В дом</button>
             <button class="filter__btn">Expert | В квартиру</button>
           </div>
+          <div class="filter__btn-menu">Фильтр</div>
           <div class="filter__col">
             <div class="block__row">
               <select name="" id="" class="filter__select">
@@ -90,15 +92,15 @@
               </select>
             </div>
             <div class="block__row filter__row-radio">
-              <label for="" class="filter__label">
+              <label class="filter__label">
                 <input type="radio" name="" id="" class="filter__radio">
                 С терморазрывом
               </label>
-              <label for="" class="filter__label">
+              <label class="filter__label">
                 <input type="radio" name="" id="" class="filter__radio">
                 Взломостойкие
               </label>
-              <label for="" class="filter__label">
+              <label class="filter__label">
                 <input type="radio" name="" id="" class="filter__radio">
                 Бронированные
               </label>
@@ -106,11 +108,11 @@
           </div>
         </div>
         <div class="filter__row_bottom">
-          <label for="" class="filter__label filter__label_active">
+          <label class="filter__label filter__label_active">
             <input type="radio" name="price" id="" class="filter__radio_small" checked>
             По возрастанию цены
           </label>
-          <label for="" class="filter__label">
+          <label class="filter__label">
             <input type="radio" name="price" id="" class="filter__radio_small">
             По убыванию цены
           </label>
@@ -148,8 +150,6 @@
                 <div class="filter__sale sale_right">46 000 &#8381;</div>
               </div>
             </div>
-          </div>
-          <div class="filter__result-row">
             <div class="col-1">
               <div class="filter__box">
                 <div class="filter-box__content  filter-box__content_down">
@@ -184,8 +184,6 @@
                 <div class="filter__sale sale_right">46 000 &#8381;</div>
               </div>
             </div>
-          </div>
-          <div class="filter__result-row">
             <div class="col-1">
               <div class="filter__box">
                 <div class="filter-box__content">
@@ -216,8 +214,6 @@
                 <div class="filter__sale sale_right">46 000 &#8381;</div>
               </div>
             </div>
-          </div>
-          <div class="filter__result-row">
             <div class="col-1">
               <div class="filter__box">
                 <div class="filter-box__content">
@@ -250,7 +246,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </div>
     <section class="catalog-ofert__section">
       <div class="container catalog__special-offer">
@@ -258,59 +254,65 @@
           <h2 class="section__name">Уникальное предложение</h2>
           <div class="newcomer__close">&#10005;</div>
         </div>
-        <div class="block__row">
+        <div class="block__row block__row_line">
           <div class="section__col">
             <h3 class="section__title">В стоимость двери входит</h3>
           </div>
         </div>
-        <ul class="catalog-ofert__row">
-          <div class="block__col-300">
-            <li class="col__item">
-              <p class="section__text">Качественные замки и ручки</p>
-            </li>
-            <li class="col__item">
-              <p class="section__text">Изменение цвета и рисунка фрезеровки</p>
-            </li>
-            <li class="col__item">
-              <p class="section__text">Замер размеров входной двери </p>
-            </li>
+        <div class="catalog-ofert__row">
+          <div class="block__col-300 unique__row">
+            <ul>
+              <li class="col__item col__item_first">
+                <p class="section__text">Качественные замки и ручки</p>
+              </li>
+              <li class="col__item">
+                <p class="section__text">Изменение цвета и рисунка фрезеровки</p>
+              </li>
+              <li class="col__item">
+                <p class="section__text">Замер размеров входной двери </p>
+              </li>
+            </ul>
           </div>
-          <div class="block__col-300">
-          <li class="col__item">
-            <p class="section__text">Доставка</p>
-          </li>
-          <li class="col__item">
-            <p class="section__text">Демонтаж старой двери</p>
-          </li>
-          <li class="col__item">
-            <p class="section__text">Установка новой двери</p>
-          </li>
+          <div class="block__col-300 unique__row">
+            <ul>
+              <li class="col__item">
+                <p class="section__text">Доставка</p>
+              </li>
+              <li class="col__item">
+                <p class="section__text">Демонтаж старой двери</p>
+              </li>
+              <li class="col__item">
+                <p class="section__text">Установка новой двери</p>
+              </li>
+            </ul>
+          </div>
+          <div class="block__col-300 unique__row">
+            <ul>
+              <li class="col__item">
+                <p class="section__text">Заделка швов монтажной пеной</p>
+              </li>
+              <li class="col__item">
+                <p class="section__text">Уборка мусора</p>
+              </li>
+              <li class="col__item">
+                <p class="section__text">Утилизация старой двери</p>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="block__col-300">
-          <li class="col__item">
-            <p class="section__text">Заделка швов монтажной пеной</p>
-          </li>
-          <li class="col__item">
-            <p class="section__text">Уборка мусора</p>
-          </li>
-          <li class="col__item">
-            <p class="section__text">Утилизация старой двери</p>
-          </li>
-        </div>
-        </ul>
         <div class="block__row block__view">
           <div class="section__col-2">
-            <div class="block__row">
+            <div class="block__row block__row-direction">
               <div class="component">
               </div>
               <div class="special-offer__card_small">
-                <div class="special-offer__box_small">
-                  <img src="img/door355.png" alt="дверь на">
+                <div class="special-offer__box_small catalog__box-small">
+                  <img src="img/door355.png" alt="дверь на" class="special-offer__box-img">
                 </div>
                 <div class="sale sale_right">35 000 &#8381;</div>
               </div>
             </div>
-            <div class="block__row">
+            <div class="block__row card__hidden">
               <div class="special-offer__card">
                 <div class="sale">26 800 &#8381;</div>
                 <div class="special-offer__box">
@@ -321,7 +323,7 @@
           </div>
           <div class="section__col">
             <div class="special-offer__box_big">
-              <img src="img/door44.png" alt="дверь на">
+              <img src="img/door44.png" alt="дверь на" class="box-big__img">
             </div>
             <div class="sale">44 000 &#8381;</div>
           </div>
@@ -337,7 +339,7 @@
         </div>
       </div>
     </section>
-    <section class="filter__section">
+    <div class="filter__section">
       <div class="container">
         <div class="filter__result-row">
           <div class="col-1">
@@ -371,8 +373,6 @@
               <div class="filter__sale sale_right">46 000 &#8381;</div>
             </div>
           </div>
-        </div>
-        <div class="filter__result-row">
           <div class="col-1">
             <div class="filter__box">
               <div class="filter-box__content  filter-box__content_down">
@@ -407,8 +407,6 @@
               <div class="filter__sale sale_right">46 000 &#8381;</div>
             </div>
           </div>
-        </div>
-        <div class="filter__result-row">
           <div class="col-1">
             <div class="filter__box">
               <div class="filter-box__content">
@@ -441,7 +439,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="newcomer__section">
       <div class="newcomer__section-row">
@@ -467,7 +465,7 @@
       </div>
     </section>
 
-    <section class="filter__section">
+    <div class="filter__section">
       <div class="container">
         <div class="filter__result-row">
           <div class="col-1">
@@ -501,8 +499,6 @@
               <div class="filter__sale sale_right">46 000 &#8381;</div>
             </div>
           </div>
-        </div>
-        <div class="filter__result-row">
           <div class="col-1">
             <div class="filter__box">
               <div class="filter-box__content  filter-box__content_down">
@@ -549,7 +545,7 @@
               </a>
             </li>
             <li class="filter__nav-item">
-              <a href="" class="filter__link">1</a>
+              <a href="" class="filter__link filter__link_active">1</a>
             </li>
             <li class="filter__nav-item">
               <a href="" class="filter__link">2</a>
@@ -577,18 +573,17 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div>
   </main>
 
   <footer class="footer">
     <div class="container">
       <div class="footer__row">
-        <div class="footer__col">
           <div class="footer__row-top">
             <a href="index.html" class="footer__logo">Expert</a>
             <ul class="footer__menu">
               <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Каталог</a>
+                <a href="catalog.html" class="footer__menu-link">Каталог</a>
               </li>
               <li class="footer__menu-item">
                 <a href="" class="footer__menu-link">Как выбрать двери</a>
@@ -603,18 +598,18 @@
                 <a href="" class="footer__menu-link">Карта сайта</a>
               </li>
             </ul>
+            <div class="footer__col_right">
+              <a href="tel:+78006666666" class="bottom__link-tel">8 800 666 66 66</a>
+              <p class="footer__text">Бесплатный звонок</p>
+            </div>
           </div>
           <div class="footer__row-bottom">
             <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
             <a href="" class="footer__bottom-link">Обработка персональных данных</a>
             <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
+            <a href="#" class="social__link">Instagtam</a>
           </div>
-        </div>
-        <div class="footer__col_right">
-          <a href="tel:+7(800)666 66 66" class="bottom__link-tel">8 800 666 66 66</a>
-          <p class="footer__text">Бесплатный звонок</p>
-          <a href="#" class="social__link">Instagtam</a>
-        </div>
+
       </div>
     </div>
   </footer>
