--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
       <section class="special-offer">
         <h2 class="section__name">Уникальное предложение</h2>
         <div class="section__row">
-          <div class="section__col section__col_small">
+          <div class="section__col-main section__col_small">
             <h3 class="section__title">В стоимость двери входит</h3>
           </div>
-          <div class="section__col">
+          <div class="section__col-main">
             <p class="section__text">Качественные замки и ручки</p>
           </div>
         </div>
-        <ul class="section__col col__items offer-col__items">
+        <ul class="section__col-main col__items offer-col__items">
           <li class="col__item">
             <p class="section__text">Изменение цвета и рисунка фрезеровки</p>
           </li>
@@ -223,7 +223,7 @@
               выборе двери, какие проблемы могут возникнуть с китайской входной дверью</p>
           </div>
         </div>
-        <ul class="section__col col__items accordion__col" id="accordion">
+        <ul class="section__col-main col__items accordion__col" id="accordion">
           <li class="accordion__item">
             <div class="accordion__item_line">
               <p class="section__text">Цена</p>
@@ -231,7 +231,6 @@
             </div>
             <p>Двери китайского производства значительно дешевле по стоимости конструкциям, изготовленным в России. Но
               так же, как и цена, качество китайских дверей значительно ниже.</p>
-              <!--  -->
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -321,7 +320,7 @@
         <div class="block__row difference__row">
           <h3 class="benefits__title difference__title safety__title">Сэкономить и купить дешевую дверь китайского производства или
             приобрести добротную конструкцию от российского производителя.</h3>
-          <div class="difference__info section__col">
+          <div class="difference__info section__col-main">
             <p class="block__text safety__text">Чтобы максимально обезопасить вас, мы предлагаем надежные конструкции с
               дополнительным функционалом.</p>
             <p class="block__text safety__text">Прочность конструкции выступает гарантией безопасности от взлома. Даже
@@ -338,7 +337,7 @@
               </div>
             </div>
           </div>
-          <div class="section__col section__col_max">
+          <div class="section__col-main section__col_max">
             <div class="safety-block__img"></div>
             <p class="benefits__text block__text-400">Штыревой антисрез — это дополнительная система защиты двери,
               которая не позволяет вскрыть дверь со стороны петель если злоумышленник их срежет.</p>
@@ -354,7 +353,7 @@
             <h6 class="safety__section-title safety__section-title_right ">Система антивор</h6>
             <div class="safety-block__img-500"></div>
           </div>
-          <div class="section__col section__col_max">
+          <div class="section__col-main section__col_max">
             <h6 class="safety__section-title safety__section-title_left">Система антивор</h6>
             <p class="benefits__text block__text-400">Система антивор — дополнительная опция безопасности входной двери.
               Злоумышленник не сможет тихо что-то сделать с такой дверью.</p>
@@ -381,7 +380,7 @@
               </div>
             </div>
           </div>
-          <div class="section__col section__col_max">
+          <div class="section__col-main section__col_max">
             <div class="safety-block__img safety-block__img-bg"></div>
             <p class="benefits__text block__text-400">Дополнительная защита примыкания — дополнительная опция
               безопасности входной двери.</p>
@@ -404,7 +403,7 @@
           <div class="section__col-2">
             <div class="safety-block__img-500 reviews__img"></div>
           </div>
-          <div class="section__col reviews__col">
+          <div class="section__col-main reviews__col">
             <div class="reviews__row block__row-reviews">
               <h3 class="benefits__title">Алексей</h3>
               <p class="block__text block__text-385 block__text-reviews">Честное слово, роскошная дверь Expert
