--- a/card-standart.html
+++ b/card-standart.html
@@ -321,8 +321,47 @@
           </table>
         </div>
 
-        <div class="card__option" data-target="option-two">2</div>
-        <div class="card__option" data-target="option-three">3</div>
+        <div class="card__option" data-target="option-two">
+          <h3 class="benefits__title card-option__title">Важнейшим условием действия гарантии на металлические двери производства Expert является их установка специально обученными бригадами мастеров. </h3>
+          <p class="card-option__content">В этом случае дверь будет служить долго и обеспечит надежную защиту вам и вашим близким.
+          </p>
+          <div class="garant__row">
+            <div class="garant__col">
+              <p class="garanr__title">Сроки действия гарантии Expert:</p>
+              <ul>
+                <li class="garant__item">
+                  <p class="garant__text">На само изделие (основная конструкция двери: металлозаготовка полотна          и петли короба) – гарантия 1 год с даты изготовления.</p>
+                </li>
+                <li class="garant__item">
+                  <p class="garant__text">Гарантийный срок на запирающие устройства кроме цилиндрового механизма в цилиндровом замке, при соблюдении указаний по эксплуатации и уходу –        7 лет с даты изготовления.</p>
+                </li>
+                <li class="garant__item">
+                  <p class="garant__text">На цилиндровый механизм и комплектующие (глазки, ручки, задвижки, уплотнитель, накладки на замки и ручки) – 1 год или в соответствии с гарантией производителя комплектующий частей.</p>
+                </li>
+              </ul>
+            </div>
+            <div class="garant__col">
+              <p class="garanr__title">В каких случаях гарантия не действует?</p>
+              <ul>
+                <li class="garant__item">
+                  <p class="garant__text">Были использованы не оригинальные комплектующие элементы                          или фурнитура заказчика.</p>
+                </li>
+                <li class="garant__item">
+                  <p class="garant__text">Двери был причинен ущерб в результате воздействия на нее третьих лиц,       либо в результате использования ее не по назначению.</p>
+                </li>
+                <li class="garant__item">
+                  <p class="garant__text">Любые неисправности и дефекты двери были несвоевременно устранены после их обнаружения.</p>
+                </li>
+                <li class="garant__item">
+                  <p class="garant__text">Имеет место естественный износ материалов и покрытий.</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card__option" data-target="option-three">
+          <div class="card__bg"></div>
+        </div>
         <div class="card__option" data-target="option-four">4</div>
         <div class="card__option" data-target="option-five">5</div>
       </div>
