--- a/card-standart.html
+++ b/card-standart.html
@@ -320,23 +320,28 @@
             </tr>
           </table>
         </div>
-
         <div class="card__option" data-target="option-two">
-          <h3 class="benefits__title card-option__title">Важнейшим условием действия гарантии на металлические двери производства Expert является их установка специально обученными бригадами мастеров. </h3>
-          <p class="card-option__content">В этом случае дверь будет служить долго и обеспечит надежную защиту вам и вашим близким.
+          <h3 class="benefits__title card-option__title">Важнейшим условием действия гарантии на металлические двери
+            производства Expert является их установка специально обученными бригадами мастеров. </h3>
+          <p class="card-option__content">В этом случае дверь будет служить долго и обеспечит надежную защиту вам и
+            вашим близким.
           </p>
           <div class="garant__row">
             <div class="garant__col">
               <p class="garanr__title">Сроки действия гарантии Expert:</p>
               <ul>
                 <li class="garant__item">
-                  <p class="garant__text">На само изделие (основная конструкция двери: металлозаготовка полотна          и петли короба) – гарантия 1 год с даты изготовления.</p>
+                  <p class="garant__text">На само изделие (основная конструкция двери: металлозаготовка полотна и петли
+                    короба) – гарантия 1 год с даты изготовления.</p>
                 </li>
                 <li class="garant__item">
-                  <p class="garant__text">Гарантийный срок на запирающие устройства кроме цилиндрового механизма в цилиндровом замке, при соблюдении указаний по эксплуатации и уходу –        7 лет с даты изготовления.</p>
+                  <p class="garant__text">Гарантийный срок на запирающие устройства кроме цилиндрового механизма в
+                    цилиндровом замке, при соблюдении указаний по эксплуатации и уходу – 7 лет с даты изготовления.</p>
                 </li>
                 <li class="garant__item">
-                  <p class="garant__text">На цилиндровый механизм и комплектующие (глазки, ручки, задвижки, уплотнитель, накладки на замки и ручки) – 1 год или в соответствии с гарантией производителя комплектующий частей.</p>
+                  <p class="garant__text">На цилиндровый механизм и комплектующие (глазки, ручки, задвижки, уплотнитель,
+                    накладки на замки и ручки) – 1 год или в соответствии с гарантией производителя комплектующий
+                    частей.</p>
                 </li>
               </ul>
             </div>
@@ -344,13 +349,16 @@
               <p class="garanr__title">В каких случаях гарантия не действует?</p>
               <ul>
                 <li class="garant__item">
-                  <p class="garant__text">Были использованы не оригинальные комплектующие элементы                          или фурнитура заказчика.</p>
+                  <p class="garant__text">Были использованы не оригинальные комплектующие элементы или фурнитура
+                    заказчика.</p>
                 </li>
                 <li class="garant__item">
-                  <p class="garant__text">Двери был причинен ущерб в результате воздействия на нее третьих лиц,       либо в результате использования ее не по назначению.</p>
+                  <p class="garant__text">Двери был причинен ущерб в результате воздействия на нее третьих лиц, либо в
+                    результате использования ее не по назначению.</p>
                 </li>
                 <li class="garant__item">
-                  <p class="garant__text">Любые неисправности и дефекты двери были несвоевременно устранены после их обнаружения.</p>
+                  <p class="garant__text">Любые неисправности и дефекты двери были несвоевременно устранены после их
+                    обнаружения.</p>
                 </li>
                 <li class="garant__item">
                   <p class="garant__text">Имеет место естественный износ материалов и покрытий.</p>
@@ -360,10 +368,157 @@
           </div>
         </div>
         <div class="card__option" data-target="option-three">
-          <div class="card__bg"></div>
+          <div class="card__bg">
+            <div class="delivery__baner">
+              <h3 class="benefits__title delivery__title">Доставка и установка входных дверей Expert осуществяется в
+                Мосвке и МО</h3>
+              <p class="card-option__content delivery__text">Доставку в другие регионы вы можете согласовать с нашим
+                менеджером.</p>
+              <div class="consultation main-btn delivery__btn">
+                <a href="#" class="consultation__link main-btn__link">Получить консультацию</a>
+                <div class="arrow main-btn__arrow"><span class="circle main-btn__circle"></span></div>
+              </div>
+            </div>
+          </div>
+          <div class="delivery__content">
+            <h3 class="benefits__title delivery-content__title">В стоимость продукции от завода "Expert" входит доставка
+              и установка до вашего места (не далее 30 км от МКАД).</h3>
+            <div class="delivery__row">
+              <p class="delivery-content__text">Доставка осуществляется на специализированном транспорте, водителями,
+                прошедшими специальную подготовку.</p>
+            </div>
+            <div class="dlivery__info">
+              <p class="delivery-content__text_grey">Если место установки расположено далее 30-ти км от МКАД, то
+                стоимость доставки расчитывается по специальному тарифу.</p>
+              <div class="delivery-box">1км / 25₽</div>
+              <p class="delivery-content__text_blue">Бесплатная доставка распространяется при установки входных дверей!
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="card__option" data-target="option-four">4</div>
-        <div class="card__option" data-target="option-five">5</div>
+        <div class="card__option" data-target="option-four">
+          <div class="recall__block">
+            <div class="recall__col">
+              <div class="recall-rating">
+                <span class="rating__blue">5</span>
+                из 5
+              </div>
+              <div class="recall__name">Петров Михаил Владимирович</div>
+              <div class="recall__data">17 апреля 2021, г.Москва</div>
+            </div>
+            <div class="recall__col">
+              <div class="recall__content">
+                <p class="recall-content__text">Достоинства</p>
+                <p class="recall-content__text recall-content__text_gray">Быстро выполнили заказ, теплая дверь</p>
+              </div>
+              <div class="recall__content">
+                <p class="recall-content__text">Недостатки</p>
+                <p class="recall-content__text recall-content__text_gray">Нет</p>
+              </div>
+              <div class="recall__content">
+                <p class="recall-content__text">Комментарии</p>
+                <p class="recall-content__text recall-content__text_gray">Изготовление двери заняло примерно дней 8, для
+                  нас это было принципиально, потому что переезд в новую квартиру был скорым. Дома тепло, нет никаких
+                  сквозняков у двери, покупкой довольны! Посоветовали родителям такую же, по цене устраивает.</p>
+              </div>
+            </div>
+          </div>
+          <div class="recall__block">
+            <div class="recall__col">
+              <div class="recall-rating">
+                <span class="rating__blue">5</span>
+                из 5
+              </div>
+              <div class="recall__name">Петров Михаил Владимирович</div>
+              <div class="recall__data">17 апреля 2021, г.Москва</div>
+            </div>
+            <div class="recall__col">
+              <div class="recall__content">
+                <p class="recall-content__text">Достоинства</p>
+                <p class="recall-content__text recall-content__text_gray">Быстро выполнили заказ, теплая дверь</p>
+              </div>
+              <div class="recall__content">
+                <p class="recall-content__text">Недостатки</p>
+                <p class="recall-content__text recall-content__text_gray">Нет</p>
+              </div>
+              <div class="recall__content">
+                <p class="recall-content__text">Комментарии</p>
+                <p class="recall-content__text recall-content__text_gray">Изготовление двери заняло примерно дней 8, для
+                  нас это было принципиально, потому что переезд в новую квартиру был скорым. Дома тепло, нет никаких
+                  сквозняков у двери, покупкой довольны! Посоветовали родителям такую же, по цене устраивает.</p>
+              </div>
+            </div>
+          </div>
+          <div class="recall__block">
+            <div class="recall__col">
+              <div class="recall-rating">
+                <span class="rating__blue">5</span>
+                из 5
+              </div>
+              <div class="recall__name">Петров Михаил Владимирович</div>
+              <div class="recall__data">17 апреля 2021, г.Москва</div>
+            </div>
+            <div class="recall__col">
+              <div class="recall__content">
+                <p class="recall-content__text">Достоинства</p>
+                <p class="recall-content__text recall-content__text_gray">Быстро выполнили заказ, теплая дверь</p>
+              </div>
+              <div class="recall__content">
+                <p class="recall-content__text">Недостатки</p>
+                <p class="recall-content__text recall-content__text_gray">Нет</p>
+              </div>
+              <div class="recall__content">
+                <p class="recall-content__text">Комментарии</p>
+                <p class="recall-content__text recall-content__text_gray">Изготовление двери заняло примерно дней 8, для
+                  нас это было принципиально, потому что переезд в новую квартиру был скорым. Дома тепло, нет никаких
+                  сквозняков у двери, покупкой довольны! Посоветовали родителям такую же, по цене устраивает.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card__option" data-target="option-five">
+          <div class="conditions__row">
+            <div class="conditions__col">
+              <h5 class="conditions__title">Вы можете оформить возврат двери Expert в следующих случаях:</h5>
+            </div>
+            <div class="conditions__col">
+              <div class="conditions__text-line">
+                <p class="conditions__text">Дверь ненадлежащего качества и имеет неустранимые дефекты</p>
+              </div>
+              <div class="conditions__text-line">
+                <p class="conditions__text">Возможно возвращение затраченных на покупку средств или замена двери на
+                  новую.</p>
+              </div>
+              <div class="conditions__text-line">
+                <p class="conditions__text">Вы также можете вернуть средства или заменить дверь на соответствующую всем
+                  параметрам, указанным в договоре.</p>
+              </div>
+              <div class="conditions__text-line">
+                <p class="conditions__text">Вернуть дверь ненадлежащего качества или комплектации можно в течение
+                  гарантийного срока, который указан в “Руководстве по эксплуатации”.</p>
+              </div>
+              <div class="conditions__text-line">
+                <p class="conditions__text">Дверь надлежащего качества подлежит возврату в течение 14 дней после покупки
+                </p>
+              </div>
+              <div class="conditions__text-line">
+                <p class="conditions__text">Вернуть дверь надлежащего качество можно только, если дверь не была в эксплуатации и не установлена в проем.</p>
+              </div>
+              <div class="conditions__text-line">
+                <p class="conditions__text">Осуществление возврата производится в соответствии c Законом РФ от 07.02.1992г. №2300-I «О защите прав потребителей».</p>
+              </div>
+            </div>
+          </div>
+          <div class="conditions__row">
+            <div class="conditions__col">
+              <h5 class="conditions__title">Как оформить возврат входной двери Expert?</h5>
+            </div>
+            <div class="conditions__col">
+              <p class="conditions__text">Оставьте заявку на сайте и наши менеджеры подробно вас проконсультируют. Для
+                получения подробной информации обращайтесь по телефону горячей линии 8 (800) 600-60-60.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <section class="add-options__section">
