--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
               <a href="catalog.html" class="header__menu-link">Каталог</a>
             </li>
             <li class="header__menu-item">
-              <a href="service.html" class="header__menu-link">Сервис</a>
+              <p class="submenu__link">Сервис</p>
+              <ul class="submenu">
+                <li class="header__menu-item">
+                  <a href="" class="header__menu-link">Как выбрать двери</a>
+                </li>
+                <li class="header__menu-item">
+                  <a href="" class="header__menu-link">Доставка и установка</a>
+                </li>
+                <li class="header__menu-item">
+                  <a href="" class="header__menu-link">Порядок оплаты</a>
+                </li>
+                <li class="header__menu-item">
+                  <a href="" class="header__menu-link">Гарантии</a>
+                </li>
+              </ul>
             </li>
             <li class="header__menu-item">
               <a href="promo.html" class="header__menu-link">Акции</a>
